завершена работа над блоком aditii-menu

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -9,3 +9,20 @@ aditii-rightLink
 
 .aditii-rightLink img:first-child
     margin-right: 17px
+
+.aditii-menu
+    background: #4ccfc1
+
+.nav-link
+    font-size: 21px
+    font-family: 'Bebas Neue', cursive
+    color: #fff
+.nav
+    min-height: 36px
+    padding: 0 140px 0 140px
+
+.nav .nav-item:nth-child(n+2)
+    border-left: 1px solid #fff
+
+.nav .nav-item
+    flex: 0 0
