--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-.aditii-container {
-  background-color: #fff !important;
-}
-
 .aditii-navbar {
   padding: 60px 0 20px 0;
   background-color: #fff !important;
@@ -18,5 +14,30 @@ aditii-rightLink {
 
 .aditii-rightLink img:first-child {
   margin-right: 17px;
+}
+
+.aditii-menu {
+  background: #4ccfc1;
+}
+
+.nav-link {
+  font-size: 21px;
+  font-family: 'Bebas Neue', cursive;
+  color: #fff;
+}
+
+.nav {
+  min-height: 36px;
+  padding: 0 140px 0 140px;
+}
+
+.nav .nav-item:nth-child(n+2) {
+  border-left: 1px solid #fff;
+}
+
+.nav .nav-item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0;
+          flex: 0 0;
 }
 /*# sourceMappingURL=style.css.map */
