--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+.aditii-container {
+  max-width: 986px;
+  margin: 0 auto;
+}
+
+.aditii-text {
+  color: #fff !important;
+}
+
 .aditii-navbar {
   padding: 60px 0 20px 0;
   background-color: #fff !important;
 }
 
-aditii-rightLink {
+.aditii-rightLink {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -20,24 +31,112 @@ aditii-rightLink {
   background: #4ccfc1;
 }
 
-.nav-link {
+.navbar-nav .nav-link {
+  padding: 9px 25px;
+  text-align: center;
   font-size: 21px;
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Bebas Neue', cursive, sans-serif;
+  line-height: 0.9;
+}
+
+.navbar-nav .nav-item {
+  min-width: 98px;
+}
+
+.navbar-light .navbar-toggler {
+  border-color: #fff !important;
+}
+
+.navbar-toggler:focus {
+  -webkit-box-shadow: 0 0 0 0.2rem #fff !important;
+          box-shadow: 0 0 0 0.2rem #fff !important;
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: none;
+  color: #fff !important;
+  text-align: center;
+  font-size: 22px;
+  display: inline;
+}
+
+.navbar-nav .nav-item:nth-child(n+2) {
+  border-left: 2px solid #fff;
+  height: 30px;
+}
+
+.bg-light {
+  background-color: transparent !important;
+}
+
+.navbar-brand {
+  margin-right: 0;
+}
+
+.levi-container {
+  background: #3fc5b3;
+}
+
+.levi-container-row {
+  padding: 67px 0 54px 0;
+}
+
+.levi-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.btn {
+  padding: 7px 25px;
+  font: 25px 'Bebas Neue', sans-serif;
+  display: block;
+  width: 143px;
+  height: 49px;
   color: #fff;
+  background-color: transparent;
+  border: solid 3px #fff;
+  border-radius: 10px;
+  margin-bottom: 51px;
 }
 
-.nav {
-  min-height: 36px;
-  padding: 0 140px 0 140px;
+.btn-primary:hover,
+.btn-primary:focus {
+  color: #fff;
+  background-color: #a1a1a1;
+  border-color: #fff;
+  -webkit-box-shadow: 0 0 0 0.01rem;
+          box-shadow: 0 0 0 0.01rem;
 }
 
-.nav .nav-item:nth-child(n+2) {
-  border-left: 1px solid #fff;
-}
-
-.nav .nav-item {
+.card {
+  background-color: transparent;
+  border: none;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0;
-          flex: 0 0;
+      -ms-flex: 0 0 415px;
+          flex: 0 0 415px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.card-body {
+  padding: 0;
+}
+
+.card-title {
+  font-size: 61px;
+  font-family: 'Bebas Neue', cursive, sans-serif;
+  line-height: 0.89;
+  margin: 15px 0 26px 0;
+}
+
+.card-text {
+  font-size: 17px;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.65;
+  margin-bottom: 32px;
 }
 /*# sourceMappingURL=style.css.map */
