сверстан блок branded-card

--- a/styles/_variable.sass
+++ b/styles/_variable.sass
@@ -1,4 +1,7 @@
 $colorWhite: #fff
+$colorGrey: #a1a1a1
 
 $colorBackLight: #4ccfc1
 $colorBackDark: #3fc5b3
+$colorButton: #3cc395
+$colorButtonGrey: #afafaf
