--- a/styles/style.sass
+++ b/styles/style.sass
@@ -14,6 +14,11 @@
 .aditii-rightLink
     display: flex
     justify-content: space-between
+    &__sum
+        width: 50px
+        height: 27px
+        font: 33px 'Bebas Neue', sans-serif
+        color: $colorGrey
 
 .aditii-rightLink img:first-child
     margin-right: 17px
@@ -60,7 +65,7 @@
     display: flex
     justify-content: center
 
-.btn
+.levi-btn
     padding: 7px 25px
     font: 25px 'Bebas Neue', sans-serif
     display: block
@@ -72,30 +77,73 @@
     border-radius: 10px
     margin-bottom: 51px
 
-.btn-primary:hover,
-.btn-primary:focus
-    color: #fff
-    background-color: #a1a1a1
-    border-color: #fff
+.levi-btn:hover,
+.levi-btn:focus
+    color: $colorWhite
+    background-color: $colorGrey
+    border-color: $colorWhite
     box-shadow: 0 0 0 0.01rem
 
-.card
+.levi-card
     background-color: transparent
     border: none
     flex: 0 0 415px
     box-sizing: border-box
 
-.card-body
+.levi-card-body
     padding: 0
 
-.card-title
-    font-size: 61px
-    font-family: 'Bebas Neue', cursive, sans-serif
+.levi-card-title
+    font: 61px 'Bebas Neue', cursive, sans-serif
     line-height: 0.89
     margin: 15px 0 26px 0
 
-.card-text
+.levi-card-text
     font-size: 17px
     font-family: 'Open Sans', sans-serif
     line-height: 1.65
     margin-bottom: 32px
+.branded-card
+    flex-direction: row
+    border: transparent
+.branded-col
+    padding-top: 21px
+    padding-bottom: 18px
+
+.branded-col2
+    border-right: 1px solid $colorButtonGrey
+    border-left: 1px solid $colorButtonGrey
+
+.branded-btn
+    width: 59px
+    height: 32px
+    border-radius: 3px
+    background-color: $colorButton
+    border: $colorButton
+    color: $colorWhite
+    font: 19px 'Bebas Neue', sans-serif
+.branded-btn:hover,
+.branded-btn:focus
+    background-color: $colorGrey
+    border-color: $colorWhite
+    box-shadow: 0 0 0 0.01rem
+.branded-btn img
+    width: 202px
+
+.branded-card-title
+    font: 27px 'Bebas Neue', sans-serif
+    line-height: 0.93
+    text-align: left
+    color: $colorButtonGrey
+    margin-bottom: 20px
+
+.branded-card-body
+    padding-left: 0
+    padding-top: 32px
+
+.products-goods02
+    margin-right: 52px
+    margin-left: 15px
+.products-goods03
+    margin-right: 77px
+    margin-left: 44px
