--- a/styles/style.sass
+++ b/styles/style.sass
@@ -106,22 +106,27 @@
 .branded-card
     flex-direction: row
     border: transparent
+
+.branded-card img
+    height: 140px
+    object-fit: contain
+
 .branded-col
     padding-top: 21px
     padding-bottom: 18px
 
 .branded-col2
-    border-right: 1px solid $colorButtonGrey
-    border-left: 1px solid $colorButtonGrey
+    border-right: 1px solid $colorBorderGrey
+    border-left: 1px solid $colorBorderGrey
 
 .branded-btn
-    width: 59px
-    height: 32px
+    padding: 10px 15px
     border-radius: 3px
     background-color: $colorButton
     border: $colorButton
     color: $colorWhite
     font: 19px 'Bebas Neue', sans-serif
+
 .branded-btn:hover,
 .branded-btn:focus
     background-color: $colorGrey
@@ -129,6 +134,7 @@
     box-shadow: 0 0 0 0.01rem
 .branded-btn img
     width: 202px
+    object-fit: contain
 
 .branded-card-title
     font: 27px 'Bebas Neue', sans-serif
@@ -147,3 +153,51 @@
 .products-goods03
     margin-right: 77px
     margin-left: 44px
+
+.products-title
+    min-height: 67px
+    display: flex
+    justify-content: start
+    align-items: center
+    margin-bottom: 30px
+
+.products-title h5
+    margin: 0 0 0 60px
+    font: 31px 'Bebas Neue', sans-serif
+
+.products-img
+    height: 126px
+    object-fit: contain
+    margin-top: 20px
+
+.products-card
+    border: 1px solid $colorBorderGrey
+    box-shadow: 0 0 0 0.10rem $colorBorderGrey
+    border-bottom: 5px solid $colorButton
+    display: flex !important
+    flex-direction: column!important
+    justify-content: center
+    align-items: center
+
+.products-card-body
+    padding: 0
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+
+.products-btn-div
+    min-width: 135px
+    display: flex
+    justify-content: space-between
+    align-items: center
+    margin-bottom: 35px
+
+.products-btn-div div
+    margin: 0 15px 0 0
+
+.products-card-title
+    margin: 12px 0
+
+.products-col
+    padding: 30px
