сверстан блок footer

--- a/styles/_variable.sass
+++ b/styles/_variable.sass
@@ -4,5 +4,6 @@ $colorGrey: #a1a1a1
 $colorBackLight: #4ccfc1
 $colorBackDark: #3fc5b3
 $colorButton: #3cc395
+$colorFooter: #2da89b
 $colorButtonGrey: #afafaf
 $colorBorderGrey: #e7e7e7
