--- a/styles/style.sass
+++ b/styles/style.sass
@@ -1,5 +1,6 @@
 @import "variable"
 @import "fonts"
+
 .aditii-container
     max-width: 986px
     margin: 0 auto
@@ -14,6 +15,7 @@
 .aditii-rightLink
     display: flex
     justify-content: space-between
+
     &__sum
         width: 50px
         height: 27px
@@ -25,14 +27,17 @@
 
 .aditii-menu
     background: $colorBackLight
+
 .navbar-nav .nav-link
     padding: 9px 25px
     text-align: center
     font-size: 21px
     font-family: 'Bebas Neue', cursive, sans-serif
     line-height: 0.9
+
 .navbar-nav .nav-item
-    min-width: 98px
+    padding-left: 10px
+    padding-right: 10px
 
 .navbar-light .navbar-toggler
     border-color: $colorWhite !important
@@ -50,6 +55,7 @@
 .navbar-nav .nav-item:nth-child(n+2)
     border-left: 2px solid $colorWhite
     height: 30px
+
 .bg-light
     background-color: transparent!important
 
@@ -61,6 +67,7 @@
 
 .levi-container-row
     padding: 67px 0 54px 0
+
 .levi-img
     display: flex
     justify-content: center
@@ -103,6 +110,7 @@
     font-family: 'Open Sans', sans-serif
     line-height: 1.65
     margin-bottom: 32px
+
 .branded-card
     flex-direction: row
     border: transparent
@@ -150,6 +158,7 @@
 .products-goods02
     margin-right: 52px
     margin-left: 15px
+
 .products-goods03
     margin-right: 77px
     margin-left: 44px
@@ -162,7 +171,7 @@
     margin-bottom: 30px
 
 .products-title h5
-    margin: 0 0 0 60px
+    margin: 0 0 0 30px
     font: 31px 'Bebas Neue', sans-serif
 
 .products-img
@@ -201,3 +210,41 @@
 
 .products-col
     padding: 30px
+
+.levi-footer
+    min-height: 337px
+    &__col
+        display: flex
+        flex-direction: column
+        justify-content: center
+        padding-right: 40px
+        padding-left: 40px
+        margin-bottom: 41px
+
+.levi-footer h5
+    font: 27px 'Bebas Neue', sans-serif
+    line-height: 0.93
+    text-align: left
+    margin: 43px 0 32px 0
+
+.levi-footer a
+    display: block
+    text-decoration: none
+    color: inherit
+    font: 15px 'Open Sans', sans-serif
+    line-height: 1.87
+    text-align: left
+
+.footer-container
+    background: $colorFooter
+
+.copyright-container
+    min-height: 46px
+    display: flex
+    justify-content: center
+    align-items: center
+
+.footer-container p
+    font: 15px 'Open Sans', sans-serif
+    line-height: 1.87
+    margin: 0
