--- a/styles/style.sass
+++ b/styles/style.sass
@@ -1,59 +1,52 @@
 @import "variable"
-@import "fonts"
 
 .aditii-container
     max-width: 986px
     margin: 0 auto
 
 .aditii-text
-    color: $colorWhite !important
+    color: $colorMain !important
 
 .aditii-navbar
     padding: 60px 0 20px 0
-    background-color: $colorWhite !important
+    background-color: $colorMain !important
 
-.aditii-rightLink
-    display: flex
-    justify-content: space-between
-
-    &__sum
-        width: 50px
-        height: 27px
-        font: 33px 'Bebas Neue', sans-serif
-        color: $colorGrey
-
-.aditii-rightLink img:first-child
-    margin-right: 17px
+    .aditii-rightLink
+        +justifyContent (space-between)
+        &__sum
+            width: 50px
+            height: 27px
+            +fontMain (33px, 1.32)
+            color: $colorButtonHover
+        img:first-child
+            margin-right: 17px
 
 .aditii-menu
     background: $colorBackLight
 
-.navbar-nav .nav-link
-    padding: 9px 25px
-    text-align: center
-    font-size: 21px
-    font-family: 'Bebas Neue', cursive, sans-serif
-    line-height: 0.9
-
-.navbar-nav .nav-item
-    padding-left: 10px
-    padding-right: 10px
+.navbar-nav
+    .nav-link
+        padding: 9px 25px
+        text-align: center
+        +fontMain (21px, 0.9)
+    .nav-item
+        padding: 0 10px
 
 .navbar-light .navbar-toggler
-    border-color: $colorWhite !important
+    border-color: $colorMain !important
 
 .navbar-toggler:focus
-    box-shadow: 0 0 0 0.20rem $colorWhite !important
+    box-shadow: 0 0 0 0.20rem $colorMain !important
 
 .navbar-light .navbar-toggler-icon
     background-image: none
-    color: $colorWhite !important
+    color: $colorMain !important
     text-align: center
     font-size: 22px
     display: inline
 
 .navbar-nav .nav-item:nth-child(n+2)
-    border-left: 2px solid $colorWhite
+    border-left: 2px solid $colorMain
     height: 30px
 
 .bg-light
@@ -69,26 +62,25 @@
     padding: 67px 0 54px 0
 
 .levi-img
-    display: flex
-    justify-content: center
+    +justifyContent (center)
 
 .levi-btn
-    padding: 7px 25px
-    font: 25px 'Bebas Neue', sans-serif
+    +fontMain (25px, 1.35)
     display: block
     width: 143px
     height: 49px
-    color: $colorWhite
+    color: $colorMain
     background-color: transparent
-    border: solid 3px $colorWhite
+    border: solid 3px $colorMain
     border-radius: 10px
+    padding: 7px 25px
     margin-bottom: 51px
 
 .levi-btn:hover,
 .levi-btn:focus
-    color: $colorWhite
-    background-color: $colorGrey
-    border-color: $colorWhite
+    color: $colorMain
+    background-color: $colorButtonHover
+    border-color: $colorMain
     box-shadow: 0 0 0 0.01rem
 
 .levi-card
@@ -101,14 +93,11 @@
     padding: 0
 
 .levi-card-title
-    font: 61px 'Bebas Neue', cursive, sans-serif
-    line-height: 0.89
+    +fontMain (61px, 0.89)
     margin: 15px 0 26px 0
 
 .levi-card-text
-    font-size: 17px
-    font-family: 'Open Sans', sans-serif
-    line-height: 1.65
+    +fontExtra (17px, 1.65)
     margin-bottom: 32px
 
 .branded-card
@@ -120,35 +109,33 @@
     object-fit: contain
 
 .branded-col
-    padding-top: 21px
-    padding-bottom: 18px
+    padding: 21px 0 18px 0
 
 .branded-col2
-    border-right: 1px solid $colorBorderGrey
-    border-left: 1px solid $colorBorderGrey
+    border-right: 1px solid $colorBorder
+    border-left: 1px solid $colorBorder
 
 .branded-btn
     padding: 10px 15px
     border-radius: 3px
     background-color: $colorButton
     border: $colorButton
-    color: $colorWhite
-    font: 19px 'Bebas Neue', sans-serif
+    color: $colorMain
+    +fontMain (19px, 1)
 
 .branded-btn:hover,
 .branded-btn:focus
-    background-color: $colorGrey
-    border-color: $colorWhite
+    background-color: $colorButtonHover
+    border-color: $colorMain
     box-shadow: 0 0 0 0.01rem
 .branded-btn img
     width: 202px
     object-fit: contain
 
 .branded-card-title
-    font: 27px 'Bebas Neue', sans-serif
-    line-height: 0.93
+    +fontMain (27px, 0.93)
     text-align: left
-    color: $colorButtonGrey
+    color: $colorBrandedTitle
     margin-bottom: 20px
 
 .branded-card-body
@@ -156,23 +143,20 @@
     padding-top: 32px
 
 .products-goods02
-    margin-right: 52px
-    margin-left: 15px
+    margin: 0 52px 0 15px
 
 .products-goods03
-    margin-right: 77px
-    margin-left: 44px
+    margin: 0 77px 0 44px
 
 .products-title
     min-height: 67px
-    display: flex
-    justify-content: start
+    +justifyContent (start)
     align-items: center
     margin-bottom: 30px
 
 .products-title h5
     margin: 0 0 0 30px
-    font: 31px 'Bebas Neue', sans-serif
+    +fontMain (31px, 0.81)
 
 .products-img
     height: 126px
@@ -180,25 +164,19 @@
     margin-top: 20px
 
 .products-card
-    border: 1px solid $colorBorderGrey
-    box-shadow: 0 0 0 0.10rem $colorBorderGrey
+    border: 1px solid $colorBorder
+    box-shadow: 0 0 0 0.10rem $colorBorder
     border-bottom: 5px solid $colorButton
-    display: flex !important
-    flex-direction: column!important
-    justify-content: center
-    align-items: center
+    @extend %flexColumnCenter
 
 .products-card-body
     padding: 0
-    display: flex
-    flex-direction: column
-    justify-content: center
+    @extend %flexColumnCenter
     align-items: center
 
 .products-btn-div
     min-width: 135px
-    display: flex
-    justify-content: space-between
+    +justifyContent (space-between)
     align-items: center
     margin-bottom: 35px
 
@@ -214,16 +192,12 @@
 .levi-footer
     min-height: 337px
     &__col
-        display: flex
-        flex-direction: column
-        justify-content: center
-        padding-right: 40px
-        padding-left: 40px
+        @extend %flexColumnCenter
+        padding: 0 40px
         margin-bottom: 41px
 
 .levi-footer h5
-    font: 27px 'Bebas Neue', sans-serif
-    line-height: 0.93
+    +fontMain (27px, 0.93)
     text-align: left
     margin: 43px 0 32px 0
 
@@ -231,8 +205,7 @@
     display: block
     text-decoration: none
     color: inherit
-    font: 15px 'Open Sans', sans-serif
-    line-height: 1.87
+    +fontExtra (15px, 1.87)
     text-align: left
 
 .footer-container
@@ -240,11 +213,9 @@
 
 .copyright-container
     min-height: 46px
-    display: flex
-    justify-content: center
+    +justifyContent (center)
     align-items: center
 
 .footer-container p
-    font: 15px 'Open Sans', sans-serif
-    line-height: 1.87
+    +fontExtra (15px, 1.87)
     margin: 0
